<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ap="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:translationY="-25dp"
            ap:layout_constraintEnd_toEndOf="parent"
            ap:layout_constraintStart_toStartOf="parent"
            ap:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/activity_main_title"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="52dp"
                android:text="@string/activity_main_title" />

            <Space
                android:id="@+id/activity_main_space"
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <Spinner
                android:id="@+id/activity_main_spinner"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:dropDownWidth="wrap_content"
                android:gravity="center"
                android:minWidth="200dp"
                android:minHeight="48dp"
                android:spinnerMode="dropdown"
                tools:ignore="SpeakableTextPresentCheck" />
        </LinearLayout>

        <com.androidplot.xy.XYPlot
            android:id="@+id/activity_main_plot"
            style="@style/APDefacto.Light"
            android:layout_width="wrap_content"
            android:layout_height="500dp"
            ap:layout_constraintEnd_toEndOf="parent"
            ap:layout_constraintStart_toStartOf="parent"
            ap:layout_constraintTop_toBottomOf="@+id/linearLayout"
            ap:title="@string/activity_main_plot_title" />

        <Button
            android:id="@+id/activity_main_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/round_shape_btn"
            android:padding="10dp"
            android:text="@string/activity_main_button_title"
            android:textColor="@color/white"
            android:textColorHighlight="@color/white"
            android:textColorLink="@color/white"
            ap:cornerRadius="50dp"
            ap:layout_constraintEnd_toEndOf="parent"
            ap:layout_constraintStart_toStartOf="parent"
            ap:layout_constraintTop_toBottomOf="@+id/activity_main_plot"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/activity_main_greetings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:text="@string/activity_main_greetings_content"
            ap:layout_constraintBottom_toBottomOf="parent"
            ap:layout_constraintEnd_toEndOf="parent"
            ap:layout_constraintStart_toStartOf="parent"
            ap:layout_constraintTop_toBottomOf="@+id/activity_main_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
